--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dev": "node server.js"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "ws": "^8.14.2",
